fixed blue colors on mobile

--- a/assets/css/attraction-home.css
+++ b/assets/css/attraction-home.css
@@ -140,6 +140,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 17px;
     font-weight: bold;
     border-radius: 13px;
+    color:black;
 }
 
 
@@ -196,6 +197,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
+    color:black;
 }
 
 .button-beige:hover{
