--- a/assets/css/dayplanner.css
+++ b/assets/css/dayplanner.css
@@ -137,6 +137,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 15px;
     font-weight: bold;
     border-radius: 13px;
+    color:black;
 }
 
 .close-btn {
@@ -148,6 +149,7 @@ input[type=number]::-webkit-outer-spin-button {
     border: none;
     border-bottom-right-radius: 15px;
     cursor: pointer;
+    color:black;
 }
 
 .results {
@@ -197,6 +199,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-right:10px;
     font-weight: bold;
     cursor: pointer;
+    color:black;
 }
 
 .event-card-btn {
@@ -208,6 +211,7 @@ input[type=number]::-webkit-outer-spin-button {
     border-bottom-left-radius: 10px;
     font-weight: bold;
     cursor: pointer;
+    color:black;
 }
 
 .event-card-name, .event-card-time, .event-card-loc {
@@ -236,17 +240,20 @@ span {
     font-weight: bold;
     border-radius: 15px;
     cursor: pointer;
+    color:black;
 }
 
 #clear-button {
     margin-top: 5px;
     width: 200px;
-    height: 40px;
+    height: 50px;
     background: linear-gradient(90deg, #FF3131 0%, #FF914D 100%);
     font-size: 20px;
+    padding:1%;
     font-weight: bold;
     border-radius: 15px;
     cursor: pointer;
+    color:black;
 }
 
 
