--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -114,6 +114,7 @@ body {
     font-size: 17px;
     font-weight: bold;
     text-decoration: underline;
+    color:black;
 }
 
 .forgot:hover{
@@ -133,6 +134,7 @@ body {
     display: flex;
     justify-content: center;
     align-items:center;
+    color:black;
 }
 
 .submit-btn{
@@ -140,6 +142,7 @@ body {
     display: flex;
     justify-content: center;
     align-items:center;
+    color:black;
 }
 
 .cancel-btn button{
@@ -149,6 +152,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     border-radius: 25px;
+    color:black;
 }
 .submit-btn input[type="submit"] {
     width:50%;
@@ -157,6 +161,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     border-radius: 25px;
+    color:black;
 }
 
 .cancel-btn button:hover{
